--- a/install
+++ b/install
@@ -12,6 +12,6 @@ cd "${BASEDIR}"
 git submodule update --init --recursive "${DOTBOT_DIR}"
 
 cd "${DOTBOT_DIR}"
-git -C  submodule sync --quiet --recursive
+git submodule sync --quiet --recursive
 
 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
